WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39096
iframes in compositing layers don't redraw correctly on scrolling
https://bugs.webkit.org/show_bug.cgi?id=39096
Summary
iframes in compositing layers don't redraw correctly on scrolling
Simon Fraser (smfr)
Reported
2010-05-13 18:00:44 PDT
When a non-composited iframe is inside a compositing layer, it doesn't always repaint correctly on scrolling.
Attachments
Patch
(20.03 KB, patch)
2010-05-13 18:07 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-05-13 18:01:56 PDT
<
rdar://problem/7932072
>
Simon Fraser (smfr)
Comment 2
2010-05-13 18:07:59 PDT
Created
attachment 56041
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-05-13 22:32:58 PDT
http://trac.webkit.org/changeset/59443
Simon Fraser (smfr)
Comment 4
2010-05-13 23:18:27 PDT
Also
r59444
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug