2010-05-13  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        iframes in compositing layers don't redraw correctly on scrolling
        https://bugs.webkit.org/show_bug.cgi?id=39096

        When an iframe ends up in a compositing layer (that is painting to its backing store), we need
        to turn off blitting on scrolling. RenderView::paintBoxDecorations() already has code to do this
        for transformed frames, so do the same thing when the frame is enclosed in a compositing layer.

        Test: compositing/iframes/iframe-copy-on-scroll.html

        * rendering/RenderView.cpp:
        (WebCore::RenderView::paintBoxDecorations):

Canonical link: https://commits.webkit.org/50600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59443 268f45cc-cd09-0410-ab3c-d52691b4dbfc